# rustylens

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md  build.sh  eslint.config.mjs  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: tag.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: Compress.tsx  ThemeToggleHeader.tsx  UnleashJulia.tsx  footer.tsx
app/compressor/: page.tsx
app/julia/: page.tsx
app/src/hooks/: useWasm.ts
app/src/pkgs/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
app/ui/: fonts.ts
utils/: handleConversion.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
